-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: javafx
-
Environment:
Linux - Ubuntu 14.04
jdk-9+157 + FX bits for build 158
To reproduce:
1. Run the HelloAlert app in rt/apps/toys/Hello
2. Click on the ToggleColor button
BUG: the dialog comes up 1-pixel wide and cannot be interacted with.
This is a regression introduced by the fix forJDK-8173901. This new bug is a much more serious bug, so if a safe fix cannot be found very soon that preserves the fix for JDK-8173901, we will need to backout the fix for JDK-8173901.
1. Run the HelloAlert app in rt/apps/toys/Hello
2. Click on the ToggleColor button
BUG: the dialog comes up 1-pixel wide and cannot be interacted with.
This is a regression introduced by the fix for
- relates to
-
JDK-8175822 Pulldown position regression and not painting correctly tooltips regression
-
- Resolved
-
-
JDK-8173901 Linux: Position of Stage is not restored after exiting full screen
-
- Resolved
-