8175204: Linux: Dialog windows come up 1-pixel wide

Reviewed-by: ddhill